learn/minio/create-minio/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio-svc
  namespace: minio-cluster
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
      nodePort: 30090  # 映射到外部的 30090 端口
    - name: console
      port: 8000
      protocol: TCP
      targetPort: 8000
      nodePort: 30080  # 映射到外部的 30080 端口
  selector:
    app: minio
  type: NodePort  # 设置为 NodePort 类型，允许外部访问
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minio-cluster
spec:
  podManagementPolicy: Parallel
  replicas: 4
  selector:
    matchLabels:
      app: minio
  serviceName: minio-svc
  template:
    metadata:
      labels:
        app: minio
    spec:
      imagePullSecrets:
        - name: registry-key
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: minio
                    operator: In
                    values:
                      - "true"
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - minio
              topologyKey: kubernetes.io/hostname
      containers:
        - args:
            - server
            - http://minio-{0...3}.minio-svc.minio-storage.svc.cluster.local/data
            - --console-address
            - :8000
            - --address
            - :9000
          image: artifactory.dosec.cn/library/minio/minio:RELEASE.2025-01-20T14-49-07Z
          imagePullPolicy: IfNotPresent
          name: minio
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
            - containerPort: 8000
              name: console
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /data
              name: minio
  # 自动申领 pvc
  volumeClaimTemplates:
    - metadata:
        name: minio
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
